Class 11th - Objects completed

--- a/Class Material/Tenth Class/index.html
+++ b/Class Material/Tenth Class/index.html
@@ -3,9 +3,175 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>E-Commerce Growth Audit</title>
+    <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-   <script src="index.js"></script> 
+    <header class="hero-section">
+        <div class="container">
+            <h1>Ready to Skyrocket Your E-Commerce Sales?</h1>
+            <h2>Double Your Sales in 90 Days– Or We Work for FREE!</h2>
+            <p>Critical mistakes silently draining your sales—and learn how to fix them fast! What you’re about to discover is the secret formula top e-commerce brands use to scale fast, even in competitive markets...</p>
+            <a href="#audit" class="cta-button">Claim Your Free "E-Commerce Growth" Audit ($1000 value)</a>
+        </div>
+    </header>
+
+    <section class="intro-section">
+        <div class="container">
+            <h3>Hey, E-Commerce Hustler!</h3>
+            <p>Are you sick and tired of watching your competitors rake in sales while you feel stuck in the mud?</p>
+            <p>Burning through ad dollars but barely moving the needle? Or worse… lying awake at night, wondering when your next sale will finally drop?</p>
+            <p>And here’s the kicker… You’re doing everything the so-called "experts" tell you to do: Running Facebook ads? Check. Posting on Instagram? Yep. SEO optimized? Of course! But despite all your efforts, you’re still… stuck.</p>
+            <p>Your cart abandonment rate is through the roof, your conversion rate is embarrassing, and to make matters worse—your ad spend keeps burning a hole in your pocket. Sound familiar?</p>
+        </div>
+    </section>
+
+    <section class="hamster-wheel-section">
+        <div class="container">
+            <h2>Welcome to the E-Commerce Hamster Wheel (a.k.a. Business Hell)</h2>
+            <p>Look, most e-commerce entrepreneurs fall into the trap of shiny object syndrome, mixed with a lethal dose of FOMO and a dash of “I can do it all myself.”</p>
+            <p>Soon enough, you’re drowning in tasks, trying to "fix" everything, and it feels like you’re running in circles—welcome to the E-Commerce Hamster Wheel.</p>
+            <p>Let’s be real. You didn’t get into e-commerce to feel overwhelmed or stuck in the mud. You deserve more. More sales. More profit. More freedom. More time to sip cocktails on the beach while your store rakes in orders on autopilot.</p>
+        </div>
+    </section>
+
+    <section class="imagine-section">
+        <div class="container">
+            <h2>Imagine This...</h2>
+            <ul>
+                <li>Predictable sales without relying on ad spend that eats away at your margins.</li>
+                <li>A 200% increase in revenue in the next 90 days—without pulling your hair out.</li>
+                <li>More time to focus on what you actually love in your business (while your sales grow in the background).</li>
+            </ul>
+            <p>If this sounds like the life you want, keep reading. The information I’m about to share will change your business—and your life—forever.</p>
+        </div>
+    </section>
+
+    <section class="empty-carts-section">
+        <div class="container">
+            <h2>Empty Carts, Missed Sales, Skyrocketing Ad Spend… Is Your E-commerce Business Slipping Through Your Fingers?</h2>
+            <p>Each abandoned cart feels like a gut punch, doesn’t it? Your store feels stagnant, and no matter how much you spend on ads, it’s like throwing money into a black hole. More traffic, but no sales.</p>
+            <p>Late nights, and endless marketing research… but still stuck. You start questioning everything: “Are my products even good enough?” “Why are my competitors thriving while I’m struggling?”</p>
+            <p>That wildly successful store you dreamed of? It’s slipping further and further away. But here's the truth… it doesn’t have to.</p>
+        </div>
+    </section>
+
+    <section class="fix-broken-section">
+        <div class="container">
+            <h2>Time to Fix What’s Broken…</h2>
+            <ul>
+                <li>Help You Increase Your Sales by 200% in Less Than 90 Days.</li>
+                <li>Uncover The Exact Mistakes Costing You Thousands in Lost Revenue.</li>
+                <li>Show You How to Cut Ad Spend While Increasing Your Conversions.</li>
+            </ul>
+            <p>Ready to finally break the cycle and get back to winning?</p>
+            <a href="#" class="cta-button">Claim Your Free "E-Commerce Growth" Audit ($1000 value)</a>
+            <p>Hurry—FREE spots are filling up fast for October!</p>
+        </div>
+    </section>
+
+    <section class="traffic-myth-section">
+        <div class="container">
+            <h2>The E-Commerce Traffic Myth That’s Killing Your Sales (and the ONE Truth That Saves It)</h2>
+            <p>You’ve heard it a thousand times: “More traffic equals more sales.” But that’s not the full story, is it?</p>
+            <p>You’re spending thousands on ads, driving traffic to your site… But most of those visitors bounce before they even make it to the checkout. Your cart abandonment rate is through the roof, and your customer acquisition costs are out of control. Why?</p>
+            <p>Because the so-called “experts” don’t understand that it’s not about more traffic. It’s about converting the traffic you already have. That’s where our 10% conversion rate comes in. We call it the E-Commerce Growth Secret:</p>
+            <ul>
+                <li>Identify your dream customer—down to their biggest fears and desires.</li>
+                <li>Speak directly to their needs, not to the entire internet.</li>
+                <li>Watch your sales skyrocket.</li>
+            </ul>
+            <a href="#" class="cta-button">Claim Your Free "E-Commerce Growth" Audit ($1000 value)</a>
+            <p>Hurry—FREE spots are filling up fast for October!</p>
+        </div>
+    </section>
+
+    <section class="set-it-forget-it-section">
+        <div class="container">
+            <h2>The “Set It & Forget It” System That Grows Your Sales 24/7</h2>
+            <p>Congratulations! Your website’s pulling in visitors, and your sales are climbing. But there’s one more genius move you need to unlock. Those visitors who didn’t buy on the first visit?</p>
+            <p>They’re not lost causes. Think about it: They came to your store for a reason. They were looking for something. Now it’s time to follow up.</p>
+            <p>Imagine this: A friendly email, reminding them of the product they viewed. A time-sensitive offer that urges them to act now. A gentle nudge, encouraging them to come back and complete the purchase. It’s like planting seeds that grow into loyal, repeat customers.</p>
+            <p>This is how you create a sales-generating machine that works for you around the clock. It’s the final piece of the puzzle that takes your store from good to unbelievably profitable.</p>
+            <a href="#" class="cta-button">Claim Your Free "E-Commerce Growth" Audit ($1000 value)</a>
+            <p>Hurry—FREE spots are filling up fast for October!</p>
+        </div>
+    </section>
+
+    <section class="guarantee-section">
+        <div class="container">
+            <h2>The 200% Sales Surge Guarantee... No Results, No Payment. Zero Risk, All Reward.</h2>
+            <p>Yep, you read that right. You’ve heard promises before. But here’s the deal—we’re not like every other agency out there.</p>
+            <p>If you follow our lead, implement our strategies, and don’t see a 200% increase in your sales within 90 days, you won’t pay another dime. NO set-up fees. NO hidden costs. NO risk for you.</p>
+            <p>Yeah, we’re that confident. It’s called our 200% Sales Surge Guarantee, and it's how we separate ourselves from the pack. Look, we’ve been in the trenches, grinding it out with e-commerce brands just like yours. We know what works and what doesn’t. We’ve done the testing, spent the ad dollars, and learned what moves the needle—and now, we’re passing that knowledge directly to you.</p>
+            <p>In fact, 90% of our clients see results faster than 90 days. We’re talking about serious growth—more sales, more customers, and more cash in your pocket. And if for some wild reason you’re the exception? Guess what— you won't pay a dime and we’ll stick with you until you get those results.</p>
+            <p>You’ve got nothing to lose and everything to gain. Are you ready?</p>
+            <a href="#" class="cta-button">Claim Your Free "E-Commerce Growth" Audit ($1000 value)</a>
+            <p>Hurry—FREE spots are filling up fast for October!</p>
+        </div>
+    </section>
+
+    <section class="claim-audit-section" id="audit">
+        <div class="container">
+            <h2>Claim Your Free $1000 E-Commerce Growth Audit…</h2>
+            <p>Limited Spots—Once They’re Gone, They’re Gone! Look, we’re not a cookie-cutter agency, and we don’t work with just anyone. We take on a limited number of clients each month because we want to give every single one the attention they deserve. That means this isn’t an offer that sticks around forever. Once those spots are gone, you’ll be waiting months for another chance.</p>
+            <p>Don’t let this slip away while your competitors are pulling ahead. What’s the Next Step?</p>
+            <p>Claim Your Free, No-Obligation E-Commerce Growth Audit ($1000 Value, ABSOLUTELY FREE), and let’s see where your business is bleeding money. We’ll break down the exact tweaks you need to make to double your sales in the next 90 days.</p>
+            <a href="#" class="cta-button">Claim Your Free "E-Commerce Growth" Audit ($1000 value)</a>
+            <p>Hurry—FREE spots are filling up fast for October!</p>
+        </div>
+    </section>
+
+    <section class="faq-section">
+        <div class="container">
+            <h2>You've Got Questions, We've Got Answers</h2>
+            <div class="faq">
+                <h3>1. What exactly is the Free E-Commerce Audit?</h3>
+                <p>It's a deep dive into your online store, traffic sources, and conversion funnels. We'll pinpoint the hidden leaks that are costing you sales and show you exactly how to fix them.</p>
+            </div>
+            <div class="faq">
+                <h3>2. How do I know this will work for my store?</h3>
+                <p>Our strategies have been battle-tested in over 1,200 niches. Whether you sell handmade jewelry or high-tech gadgets, we've got you covered.</p>
+            </div>
+            <div class="faq">
+                <h3>3. Do you work with new stores or only established ones?</h3>
+                <p>We work with e-commerce businesses of all sizes. If you're serious about growth and ready to take action, we can help you.</p>
+            </div>
+            <div class="faq">
+                <h3>4. Can you guarantee results?</h3>
+                <p>Absolutely. In fact, we offer a bold guarantee: If we don't show you how to double your sales in 90 days, you won't pay us a cent.</p>
+            </div>
+            <div class="faq">
+                <h3>5. What's the catch?</h3>
+                <p>No catch. No hidden fees. We believe in delivering massive value upfront. If you choose to work with us after the audit, great. If not, you'll still walk away with actionable insights to skyrocket your sales.</p>
+            </div>
+            <div class="faq">
+                <h3>6. How soon can I see results?</h3>
+                <p>Many of our clients start seeing significant improvements within weeks of implementing our strategies.</p>
+            </div>
+        </div>
+    </section>
+
+    <section class="final-cta-section">
+        <div class="container">
+            <h2>Now, the Choice is Yours…</h2>
+            <p>You have 3 options:</p>
+            <ul>
+                <li><strong>Option 1:</strong> Close this page and keep struggling. You’ll keep missing out on sales, wasting money on ads, and wondering why your store isn’t growing.</li>
+                <li><strong>Option 2:</strong> Keep running the same strategies and hoping for better results. You might get some results, but they’ll never be as good as they could be. You’ll still be wasting time, money, and energy.</li>
+                <li><strong>Option 3:</strong> Take the Free Audit and take control of your store’s future. You’ll get a customized growth plan, tools to fix your store’s problems, and strategies to boost your sales by 200%.</li>
+            </ul>
+            <p>The 3rd option is the obvious winner—so what are you waiting for?</p>
+            <a href="#" class="cta-button">Claim Your Free "E-Commerce Growth" Audit ($1000 value)</a>
+            <p>Hurry—FREE spots are filling up fast for October!</p>
+        </div>
+    </section>
+
+    <footer class="footer-section">
+        <div class="container">
+            <p>&copy; 2024 E-Commerce Growth. All rights reserved.</p>
+        </div>
+    </footer>
 </body>
 </html>
